Email id varifaction mailing setup done

--- a/backend/htmlTemplets/email.html
+++ b/backend/htmlTemplets/email.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- User this templet for mailing -->
     <div style="max-width: 700px; margin-bottom: 1rem; display: flex; align-items: center; gap: 10px; font-family: Roboto; font-weight: 600; color: #3b5998;">
         <img src="https://res.cloudinary.com/dnnklt79k/image/upload/v1693748628/FB/logo_r8ueez.png" alt="" style="width: 30px;" />
         <span>Action require: Activate you facebook Account</span>
@@ -19,9 +20,11 @@
         style="width: 200px; padding: 10px 15px; background: #4c649b; text-decoration: none; font-weight: 600; color: #fff;"
         >Confirm your account</a>
         <br />
+        <div style="padding-top: 20px; color: #898f9c;">
+            Facebook enables you to stay connected with your friends. Once registered, you can effortlessly share photos, organize events, and much more.
+        </div>
     </div>
-    <div style="padding-top: 20px; margin: 1.5rem 0; color: #898f9c;">
-        Facebook allow you to stay in touch with all your friends, once registertered on facebook, you can share photo, orgnization events and much more.
-    </div>
+    <!-- User this templet for mailing -->
+    <!-- copy and past this html into mailer.js in options.html obj -->
 </body>
 </html>
