Login screen front end added.

--- a/backend/htmlTemplets/email.html
+++ b/backend/htmlTemplets/email.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- User this templet for mailing -->
-    <div style="max-width: 700px; margin-bottom: 1rem; display: flex; align-items: center; gap: 10px; font-family: Roboto; font-weight: 600; color: #3b5998;">
-        <img src="https://res.cloudinary.com/dnnklt79k/image/upload/v1693748628/FB/logo_r8ueez.png" alt="" style="width: 30px;" />
+    <div
+        style="max-width: 700px; margin-bottom: 1rem; display: flex; align-items: center; gap: 10px; font-family: Roboto; font-weight: 600; color: #3b5998;">
+        <img src="https://res.cloudinary.com/dnnklt79k/image/upload/v1693748628/FB/logo_r8ueez.png" alt=""
+            style="width: 30px;" />
         <span>Action require: Activate you facebook Account</span>
     </div>
-    <div style="padding: 1rem 0; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; font-size: 17px; color: #141023; font-family: Roboto;">
+    <div
+        style="padding: 1rem 0; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; font-size: 17px; color: #141023; font-family: Roboto;">
         <span>Hello Jhon!</span>
         <div style="padding: 20px 0;">
-            <span>You've recently set up a Facebook account. To finalize your registration, kindly confirm your email.</span>
+            <span>You've recently set up a Facebook account. To finalize your registration, kindly confirm your
+                email.</span>
         </div>
         <a href="${url}" target="_blank" rel="noopener noreferrer"
-        style="width: 200px; padding: 10px 15px; background: #4c649b; text-decoration: none; font-weight: 600; color: #fff;"
-        >Confirm your account</a>
+            style="width: 200px; padding: 10px 15px; background: #4c649b; text-decoration: none; font-weight: 600; color: #fff;">Confirm
+            your account</a>
         <br />
         <div style="padding-top: 20px; color: #898f9c;">
-            Facebook enables you to stay connected with your friends. Once registered, you can effortlessly share photos, organize events, and much more.
+            Facebook enables you to stay connected with your friends. Once registered, you can effortlessly share
+            photos, organize events, and much more.
         </div>
     </div>
     <!-- User this templet for mailing -->
     <!-- copy and past this html into mailer.js in options.html obj -->
 </body>
+
 </html>
